--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 
 <body>
     
+<header>
+    <div class="top">
+        <img src="images/logo/Reservia.svg" alt="reservia_logo" />
+        <a id="inscription" href="#inscription">S'inscrire</a>
+    </div>
+    <div class="bottom">
+        <a href="#hebergements">Hébergements</a>
+        <a href="#activites">Activités</a>
+    </div>
+</header>
+
 </body>
 
 
