Ajout de la devise

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     </div>
 </header>
 
+<section>
+    <h1>Trouver votre hébergement pour des vacances de rêve</h1>
+    <h2>En plein centre ville ou en pleine nature</h2>
+</section>
+
 </body>
 
 
