Ajout du champ Recherche

--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="index.css">
     <title>Reservia</title>
 </head>
 
 
 <body>
-    
-<header>
-    <div class="top">
-        <img src="images/logo/Reservia.svg" alt="reservia_logo" />
-        <a id="inscription" href="#inscription">S'inscrire</a>
-    </div>
-    <div class="bottom">
-        <a href="#hebergements">Hébergements</a>
-        <a href="#activites">Activités</a>
-    </div>
-</header>
 
-<section>
-    <h1>Trouver votre hébergement pour des vacances de rêve</h1>
-    <h2>En plein centre ville ou en pleine nature</h2>
-</section>
+    <header>
+        <div class="top">
+            <img src="images/logo/Reservia.svg" alt="reservia_logo" />
+            <a id="inscription" href="#inscription">S'inscrire</a>
+        </div>
+        <div class="bottom">
+            <a href="#hebergements">Hébergements</a>
+            <a href="#activites">Activités</a>
+        </div>
+    </header>
+
+    <section>
+        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+        <h2>En plein centre ville ou en pleine nature</h2>
+        <div class="searchInput">
+            <i class="fas fa-map-marker-alt location"></i>
+            <input type="text" value="Marseille, France" />
+            <i class="fas fa-search search"></i>
+        </div>
+    </section>
 
 </body>
 
