--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </header>
 
-    <section>
+    <section class="research">
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <h2>En plein centre ville ou en pleine nature</h2>
         <div class="searchInput">
@@ -32,6 +32,84 @@
             <input type="text" value="Marseille, France" />
             <i class="fas fa-search search"></i>
         </div>
+        <section class="filters">
+            <h3>Filtres</h3>
+            <div class="filtersGroup">
+                <div class="filter">
+                    <i class="fas fa-money-bill-wave"></i>
+                    <h4>Economique</h4>
+                </div>
+                <div class="filter">
+                    <i class="fas fa-child"></i>
+                    <h4>Familial</h4>
+                </div>
+                <div class="filter">
+                    <i class="fas fa-heart"></i>
+                    <h4>Romantique</h4>
+                </div>
+                <div class="filter">
+                    <i class="fas fa-dog"></i>
+                    <h4>Animaux autorisés</h4>
+                </div>
+            </div>
+        </section>
+        <div class="info">
+            <i class="fas fa-info"></i>
+            <p>Plus de 500 logements sont disponibles dans cette ville</p>
+        </div>
+    </section>
+
+    <section class="results">
+        <section class="popular">
+            <header>
+                <h2>Les plus populaires</h2>
+                <i class="fas fa-chart-line"></i>
+            </header>
+            <div class="cards">
+                <div class="card">
+                    <img src="images\hebergements\1_xlarge\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" />
+                    <div class="description">
+                        <h3>Hotel le soleil du matin</h3>
+                        <p>Nuit à partir de 128€</p>
+                        <div class="rating">
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images\hebergements\1_xlarge\aw-creative-VGs8z60yT2c-unsplash.jpg" />
+                    <div class="description">
+                        <h3>Au coeur de l'eau Chambres d'hotes</h3>
+                        <p>Nuit à partir de 71€</p>
+                        <div class="rating">
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star empty"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images\hebergements\1_xlarge\febrian-zakaria-sjvU0THccQA-unsplash.jpg" />
+                    <div class="description">
+                        <h3>Hotel Tout bleu et blanc</h3>
+                        <p>Nuit à partir de 68€</p>
+                        <div class="rating">
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star empty"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </section>
 
 </body>
