Ajout Hébergements et Activités

--- a/index.html
+++ b/index.html
@@ -60,17 +60,19 @@
     </section>
 
     <section class="results">
-        <section class="popular">
+        <section class="result popular">
             <header>
                 <h2>Les plus populaires</h2>
                 <i class="fas fa-chart-line"></i>
             </header>
             <div class="cards">
                 <div class="card">
-                    <img src="images\hebergements\1_xlarge\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" />
+                    <div class="image soleilMatin">
+
+                    </div>
                     <div class="description">
                         <h3>Hotel le soleil du matin</h3>
-                        <p>Nuit à partir de 128€</p>
+                        <p>Nuit à partir de 128<span class="bold">€</span></p>
                         <div class="rating">
                             <i class="fas fa-star star"></i>
                             <i class="fas fa-star star"></i>
@@ -81,10 +83,12 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images\hebergements\1_xlarge\aw-creative-VGs8z60yT2c-unsplash.jpg" />
+                    <div class="image coeurEau">
+
+                    </div>
                     <div class="description">
                         <h3>Au coeur de l'eau Chambres d'hotes</h3>
-                        <p>Nuit à partir de 71€</p>
+                        <p>Nuit à partir de 71<span class="bold">€</span></p>
                         <div class="rating">
                             <i class="fas fa-star star"></i>
                             <i class="fas fa-star star"></i>
@@ -95,10 +99,12 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images\hebergements\1_xlarge\febrian-zakaria-sjvU0THccQA-unsplash.jpg" />
+                    <div class="image bleuBlanc">
+
+                    </div>
                     <div class="description">
                         <h3>Hotel Tout bleu et blanc</h3>
-                        <p>Nuit à partir de 68€</p>
+                        <p>Nuit à partir de 68<span class="bold">€</span></p>
                         <div class="rating">
                             <i class="fas fa-star star"></i>
                             <i class="fas fa-star star"></i>
@@ -107,6 +113,155 @@
                             <i class="fas fa-star star empty"></i>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="result logement">
+            <header>
+                <h2>Hébergements à Marseille</h2>
+            </header>
+            <div class="cards">
+                <div class="card">
+                    <div class="image cannebiere">
+
+                    </div>
+                    <div class="description">
+                        <h3>Auberge la Cannebière</h3>
+                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <div class="rating">
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star empty"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="image port">
+
+                    </div>
+                    <div class="description">
+                        <h3>Hotel du port</h3>
+                        <p>Nuit à partir de 71<span class="bold">€</span></p>
+                        <div class="rating">
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="image mouettes">
+
+                    </div>
+                    <div class="description">
+                        <h3>Hotel Les mouettes</h3>
+                        <p>Nuit à partir de 76<span class="bold">€</span></p>
+                        <div class="rating">
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star empty"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="image mer">
+
+                    </div>
+                    <div class="description">
+                        <h3>Hotel de la mer</h3>
+                        <p>Nuit à partir de 46<span class="bold">€</span></p>
+                        <div class="rating">
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star empty"></i>
+                            <i class="fas fa-star star empty"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="image panier">
+
+                    </div>
+                    <div class="description">
+                        <h3>Auberge Le Panier</h3>
+                        <p>Nuit à partir de <strong>23€</strong></p>
+                        <div class="rating">
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star empty"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="image amina">
+
+                    </div>
+                    <div class="description">
+                        <h3>Hotel chez Amina</h3>
+                        <p>Nuit à partir de 96<span class="bold">€</span></p>
+                        <div class="rating">
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                            <i class="fas fa-star star"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p class="more">Afficher plus</p>
+        </section>
+
+        <section class="result activities">
+            <header>
+                <h2>Activités à Marseille</h2>
+            </header>
+            <div class="cards">
+                <div class="card">
+                    <div class="image vieuxPort">
+
+                    </div>
+                    <h3>Vieux Port</h3>
+                </div>
+                <div class="card">
+                    <div class="image fortPomegues">
+
+                    </div>
+                    <h3>Fort de Pomègues</h3>
+                </div>
+                <div class="card">
+                    <div class="image ilesFrioul">
+
+                    </div>
+                    <h3>Iles du Frioul</h3>
+                </div>
+                <div class="card">
+                    <div class="image parcCalangues">
+
+                    </div>
+                    <h3>Parc National des Calangues</h3>
+                </div>
+                <div class="card">
+                    <div class="image notreDame">
+
+                    </div>
+                    <h3>Notre-Dame-de-la-Garde</h3>
+                </div>
+                <div class="card">
+                    <div class="image parcLongchamp">
+
+                    </div>
+                    <h3>Parc Longchamp</h3>
                 </div>
             </div>
         </section>
