--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a id="inscription" href="#inscription">S'inscrire</a>
         </div>
         <div class="bottom">
-            <a href="#hebergements">Hébergements</a>
-            <a href="#activites">Activités</a>
+            <a href="#logements">Hébergements</a>
+            <a href="#activities">Activités</a>
         </div>
     </header>
 
@@ -60,7 +60,7 @@
     </section>
 
     <section class="results">
-        <section class="result popular">
+        <section class="result" id="popular">
             <header>
                 <h2>Les plus populaires</h2>
                 <i class="fas fa-chart-line"></i>
@@ -117,7 +117,7 @@
             </div>
         </section>
 
-        <section class="result logement">
+        <section class="result" id="logements">
             <header>
                 <h2>Hébergements à Marseille</h2>
             </header>
@@ -222,7 +222,7 @@
             <p class="more">Afficher plus</p>
         </section>
 
-        <section class="result activities">
+        <section class="result" id="activities">
             <header>
                 <h2>Activités à Marseille</h2>
             </header>
@@ -266,6 +266,25 @@
             </div>
         </section>
     </section>
+
+    <footer>
+        <div class="category">
+            <h4>A propos</h4>
+            <a href="">Fonctionnement du site</a>
+            <a href="">Conditions générales de vente</a>
+            <a href="">Données et confidentialité</a>
+        </div>
+        <div class="category hebergements">
+            <h4>Nos Hébergements</h4>
+            <a href="">Charte qualité</a>
+            <a href="">Soumettre votre hotel</a>
+        </div>
+        <div class="category assistance">
+            <h4>Assistance</h4>
+            <a href="">Centre d'aide</a>
+            <a href="">Nous contacter</a>
+        </div>
+    </footer>
 
 </body>
 
