--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="index.css">
@@ -15,7 +15,7 @@
 
     <header>
         <div class="top">
-            <img src="images/logo/Reservia.svg" alt="reservia_logo" />
+            <h1><img src="images/logo/Reservia.svg" alt="reservia_logo" /></h1>
             <a id="inscription" href="#inscription">S'inscrire</a>
         </div>
         <div class="bottom">
@@ -25,13 +25,14 @@
     </header>
 
     <section class="research">
-        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-        <h2>En plein centre ville ou en pleine nature</h2>
-        <div class="searchInput">
+        <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
+        <p>En plein centre ville ou en pleine nature</p>
+        <form class="searchInput">
             <i class="fas fa-map-marker-alt location"></i>
             <input type="text" value="Marseille, France" />
-            <i class="fas fa-search search"></i>
-        </div>
+            <button type="submit" class="search"><i class="fas fa-search"></i></button>
+            <button type="submit" class="search laptop">Rechercher</button>
+        </form>
         <section class="filters">
             <h3>Filtres</h3>
             <div class="filtersGroup">
@@ -66,7 +67,7 @@
                 <i class="fas fa-chart-line"></i>
             </header>
             <div class="cards">
-                <div class="card">
+                <a href="#" class="card">
                     <div class="image soleilMatin">
 
                     </div>
@@ -81,8 +82,8 @@
                             <i class="fas fa-star star"></i>
                         </div>
                     </div>
-                </div>
-                <div class="card">
+                </a>
+                <a href="#" class="card">
                     <div class="image coeurEau">
 
                     </div>
@@ -97,8 +98,8 @@
                             <i class="fas fa-star star empty"></i>
                         </div>
                     </div>
-                </div>
-                <div class="card">
+                </a>
+                <a href="#" class="card">
                     <div class="image bleuBlanc">
 
                     </div>
@@ -113,7 +114,7 @@
                             <i class="fas fa-star star empty"></i>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
         </section>
 
@@ -122,7 +123,7 @@
                 <h2>Hébergements à Marseille</h2>
             </header>
             <div class="cards">
-                <div class="card">
+                <a href="#" class="card">
                     <div class="image cannebiere">
 
                     </div>
@@ -137,8 +138,8 @@
                             <i class="fas fa-star star empty"></i>
                         </div>
                     </div>
-                </div>
-                <div class="card">
+                </a>
+                <a href="#" class="card">
                     <div class="image port">
 
                     </div>
@@ -153,8 +154,8 @@
                             <i class="fas fa-star star"></i>
                         </div>
                     </div>
-                </div>
-                <div class="card">
+                </a>
+                <a href="#" class="card">
                     <div class="image mouettes">
 
                     </div>
@@ -169,8 +170,8 @@
                             <i class="fas fa-star star empty"></i>
                         </div>
                     </div>
-                </div>
-                <div class="card">
+                </a>
+                <a href="#" class="card">
                     <div class="image mer">
 
                     </div>
@@ -185,8 +186,8 @@
                             <i class="fas fa-star star empty"></i>
                         </div>
                     </div>
-                </div>
-                <div class="card">
+                </a>
+                <a href="#" class="card">
                     <div class="image panier">
 
                     </div>
@@ -201,8 +202,8 @@
                             <i class="fas fa-star star empty"></i>
                         </div>
                     </div>
-                </div>
-                <div class="card">
+                </a>
+                <a href="#" class="card">
                     <div class="image amina">
 
                     </div>
@@ -217,7 +218,7 @@
                             <i class="fas fa-star star"></i>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
             <p class="more">Afficher plus</p>
         </section>
@@ -227,42 +228,42 @@
                 <h2>Activités à Marseille</h2>
             </header>
             <div class="cards">
-                <div class="card">
+                <a href="#" class="card">
                     <div class="image vieuxPort">
 
                     </div>
                     <h3>Vieux Port</h3>
-                </div>
-                <div class="card">
+                </a>
+                <a href="#" class="card">
                     <div class="image fortPomegues">
 
                     </div>
                     <h3>Fort de Pomègues</h3>
-                </div>
-                <div class="card">
+                </a>
+                <a href="#" class="card">
                     <div class="image ilesFrioul">
 
                     </div>
                     <h3>Iles du Frioul</h3>
-                </div>
-                <div class="card">
+                </a>
+                <a href="#" class="card">
                     <div class="image parcCalangues">
 
                     </div>
                     <h3>Parc National des Calangues</h3>
-                </div>
-                <div class="card">
+                </a>
+                <a href="#" class="card">
                     <div class="image notreDame">
 
                     </div>
                     <h3>Notre-Dame-de-la-Garde</h3>
-                </div>
-                <div class="card">
+                </a>
+                <a href="#" class="card">
                     <div class="image parcLongchamp">
 
                     </div>
                     <h3>Parc Longchamp</h3>
-                </div>
+                </a>
             </div>
         </section>
     </section>
