--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </header>
             <div class="cards">
                 <a href="#" class="card">
-                    <div class="image soleilMatin">
+                    <div class="image" id="soleilMatin">
 
                     </div>
                     <div class="description">
@@ -84,7 +84,7 @@
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <div class="image coeurEau">
+                    <div class="image" id="coeurEau">
 
                     </div>
                     <div class="description">
@@ -100,7 +100,7 @@
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <div class="image bleuBlanc">
+                    <div class="image" id="bleuBlanc">
 
                     </div>
                     <div class="description">
@@ -124,7 +124,7 @@
             </header>
             <div class="cards">
                 <a href="#" class="card">
-                    <div class="image cannebiere">
+                    <div class="image" id="cannebiere">
 
                     </div>
                     <div class="description">
@@ -140,7 +140,7 @@
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <div class="image port">
+                    <div class="image" id="port">
 
                     </div>
                     <div class="description">
@@ -156,7 +156,7 @@
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <div class="image mouettes">
+                    <div class="image" id="mouettes">
 
                     </div>
                     <div class="description">
@@ -172,7 +172,7 @@
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <div class="image mer">
+                    <div class="image" id="mer">
 
                     </div>
                     <div class="description">
@@ -188,7 +188,7 @@
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <div class="image panier">
+                    <div class="image" id="panier">
 
                     </div>
                     <div class="description">
@@ -204,7 +204,7 @@
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <div class="image amina">
+                    <div class="image" id="amina">
 
                     </div>
                     <div class="description">
@@ -228,42 +228,46 @@
                 <h2>Activités à Marseille</h2>
             </header>
             <div class="cards">
-                <a href="#" class="card">
-                    <div class="image vieuxPort">
+                <a href="#" class="card" id="vieuxPort">
+                    <div class="image" id="vieuxPort_img">
 
                     </div>
                     <h3>Vieux Port</h3>
                 </a>
-                <a href="#" class="card">
-                    <div class="image fortPomegues">
+                <div class="bloc_Card">
+                    <a href="#" class="card" id="fortPomegues">
+                        <div class="image" id="fortPomegues_img">
 
-                    </div>
-                    <h3>Fort de Pomègues</h3>
-                </a>
-                <a href="#" class="card">
-                    <div class="image ilesFrioul">
+                        </div>
+                        <h3>Fort de Pomègues</h3>
+                    </a>
+                    <a href="#" class="card" id="ilesFrioul">
+                        <div class="image" id="ilesFrioul_img">
 
-                    </div>
-                    <h3>Iles du Frioul</h3>
-                </a>
-                <a href="#" class="card">
-                    <div class="image parcCalangues">
+                        </div>
+                        <h3>Iles du Frioul</h3>
+                    </a>
+                </div>
+                <a href="#" class="card" id="parcCalangues">
+                    <div class="image" id="parcCalangues_img">
 
                     </div>
                     <h3>Parc National des Calangues</h3>
                 </a>
-                <a href="#" class="card">
-                    <div class="image notreDame">
+                <div class="bloc_Card">
+                    <a href="#" class="card" id="notreDame">
+                        <div class="image" id="notreDame_img">
 
-                    </div>
-                    <h3>Notre-Dame-de-la-Garde</h3>
-                </a>
-                <a href="#" class="card">
-                    <div class="image parcLongchamp">
+                        </div>
+                        <h3>Notre-Dame-de-la-Garde</h3>
+                    </a>
+                    <a href="#" class="card" id="parcLongchamp">
+                        <div class="image" id="parcLongchamp_img">
 
-                    </div>
-                    <h3>Parc Longchamp</h3>
-                </a>
+                        </div>
+                        <h3>Parc Longchamp</h3>
+                    </a>
+                </div>
             </div>
         </section>
     </section>
