--- a/index.html
+++ b/index.html
@@ -273,21 +273,21 @@
     </section>
 
     <footer>
-        <div class="category">
+        <div class="category" id="about">
             <h4>A propos</h4>
-            <a href="">Fonctionnement du site</a>
-            <a href="">Conditions générales de vente</a>
-            <a href="">Données et confidentialité</a>
+            <a href="#">Fonctionnement du site</a>
+            <a href="#">Conditions générales de vente</a>
+            <a href="#">Données et confidentialité</a>
         </div>
-        <div class="category hebergements">
+        <div class="category" id="hebergements">
             <h4>Nos Hébergements</h4>
-            <a href="">Charte qualité</a>
-            <a href="">Soumettre votre hotel</a>
+            <a href="#">Charte qualité</a>
+            <a href="#">Soumettre votre hotel</a>
         </div>
-        <div class="category assistance">
+        <div class="category" id="assistance">
             <h4>Assistance</h4>
-            <a href="">Centre d'aide</a>
-            <a href="">Nous contacter</a>
+            <a href="#">Centre d'aide</a>
+            <a href="#">Nous contacter</a>
         </div>
     </footer>
 
