--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             <a id="inscription" href="#inscription">S'inscrire</a>
         </div>
         <div class="bottom">
-            <a href="#logements">Hébergements</a>
-            <a href="#activities">Activités</a>
+            <a href="#logements" id="logements_link">Hébergements</a>
+            <a href="#activities" id="activities_link">Activités</a>
+            <a id="inscription" href="#inscription">S'inscrire</a>
         </div>
     </header>
 
