--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="Css/index.css">
     <title>Reservia</title>
 </head>
 
@@ -16,12 +16,12 @@
     <header>
         <div class="top">
             <h1><img src="images/logo/Reservia.svg" alt="reservia_logo" /></h1>
-            <a id="inscription" href="#inscription">S'inscrire</a>
+            <a class="inscription" href="#inscription">S'inscrire</a>
         </div>
         <div class="bottom">
             <a href="#logements" id="logements_link">Hébergements</a>
             <a href="#activities" id="activities_link">Activités</a>
-            <a id="inscription" href="#inscription">S'inscrire</a>
+            <a class="inscription" href="#inscription">S'inscrire</a>
         </div>
     </header>
 
@@ -39,7 +39,7 @@
             <div class="filtersGroup">
                 <div class="filter">
                     <i class="fas fa-money-bill-wave"></i>
-                    <h4>Economique</h4>
+                    <h4>Économique</h4>
                 </div>
                 <div class="filter">
                     <i class="fas fa-child"></i>
@@ -68,12 +68,12 @@
                 <i class="fas fa-chart-line"></i>
             </header>
             <div class="cards">
-                <a href="#" class="card">
-                    <div class="image" id="soleilMatin">
+                <a href="#" class="card" id="soleilMatin">
+                    <div class="image" id="soleilMatin_img">
 
                     </div>
                     <div class="description">
-                        <h3>Hotel le soleil du matin</h3>
+                        <h3>Hôtel le soleil du matin</h3>
                         <p>Nuit à partir de 128<span class="bold">€</span></p>
                         <div class="rating">
                             <i class="fas fa-star star"></i>
@@ -84,12 +84,12 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" class="card">
-                    <div class="image" id="coeurEau">
+                <a href="#" class="card" id="coeurEau">
+                    <div class="image" id="coeurEau_img">
 
                     </div>
                     <div class="description">
-                        <h3>Au coeur de l'eau Chambres d'hotes</h3>
+                        <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                         <p>Nuit à partir de 71<span class="bold">€</span></p>
                         <div class="rating">
                             <i class="fas fa-star star"></i>
@@ -100,12 +100,12 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" class="card">
-                    <div class="image" id="bleuBlanc">
+                <a href="#" class="card" id="bleuBlanc">
+                    <div class="image" id="bleuBlanc_img">
 
                     </div>
                     <div class="description">
-                        <h3>Hotel Tout bleu et blanc</h3>
+                        <h3>Hôtel Tout bleu et blanc</h3>
                         <p>Nuit à partir de 68<span class="bold">€</span></p>
                         <div class="rating">
                             <i class="fas fa-star star"></i>
@@ -125,7 +125,7 @@
             </header>
             <div class="cards">
                 <a href="#" class="card">
-                    <div class="image" id="cannebiere">
+                    <div class="image" id="cannebiere_img">
 
                     </div>
                     <div class="description">
@@ -141,11 +141,11 @@
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <div class="image" id="port">
+                    <div class="image" id="port_img">
 
                     </div>
                     <div class="description">
-                        <h3>Hotel du port</h3>
+                        <h3>Hôtel du port</h3>
                         <p>Nuit à partir de 71<span class="bold">€</span></p>
                         <div class="rating">
                             <i class="fas fa-star star"></i>
@@ -157,11 +157,11 @@
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <div class="image" id="mouettes">
+                    <div class="image" id="mouettes_img">
 
                     </div>
                     <div class="description">
-                        <h3>Hotel Les mouettes</h3>
+                        <h3>Hôtel Les mouettes</h3>
                         <p>Nuit à partir de 76<span class="bold">€</span></p>
                         <div class="rating">
                             <i class="fas fa-star star"></i>
@@ -173,11 +173,11 @@
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <div class="image" id="mer">
+                    <div class="image" id="mer_img">
 
                     </div>
                     <div class="description">
-                        <h3>Hotel de la mer</h3>
+                        <h3>Hôtel de la mer</h3>
                         <p>Nuit à partir de 46<span class="bold">€</span></p>
                         <div class="rating">
                             <i class="fas fa-star star"></i>
@@ -189,7 +189,7 @@
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <div class="image" id="panier">
+                    <div class="image" id="panier_img">
 
                     </div>
                     <div class="description">
@@ -205,11 +205,11 @@
                     </div>
                 </a>
                 <a href="#" class="card">
-                    <div class="image" id="amina">
+                    <div class="image" id="amina_img">
 
                     </div>
                     <div class="description">
-                        <h3>Hotel chez Amina</h3>
+                        <h3>Hôtel chez Amina</h3>
                         <p>Nuit à partir de 96<span class="bold">€</span></p>
                         <div class="rating">
                             <i class="fas fa-star star"></i>
@@ -221,7 +221,7 @@
                     </div>
                 </a>
             </div>
-            <p class="more">Afficher plus</p>
+            <button class="more">Afficher plus</button>
         </section>
 
         <section class="result" id="activities">
@@ -246,7 +246,7 @@
                         <div class="image" id="ilesFrioul_img">
 
                         </div>
-                        <h3>Iles du Frioul</h3>
+                        <h3>Îles du Frioul</h3>
                     </a>
                 </div>
                 <a href="#" class="card" id="parcCalangues">
