--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
 
     <section class="results">
-        <section class="result" id="popular">
+        <div class="result" id="popular">
             <header>
                 <h2>Les plus populaires</h2>
                 <i class="fas fa-chart-line"></i>
@@ -117,9 +117,9 @@
                     </div>
                 </a>
             </div>
-        </section>
+        </div>
 
-        <section class="result" id="logements">
+        <div class="result" id="logements">
             <header>
                 <h2>Hébergements à Marseille</h2>
             </header>
@@ -222,9 +222,9 @@
                 </a>
             </div>
             <button class="more">Afficher plus</button>
-        </section>
+        </div>
 
-        <section class="result" id="activities">
+        <div class="result" id="activities">
             <header>
                 <h2>Activités à Marseille</h2>
             </header>
@@ -270,7 +270,7 @@
                     </a>
                 </div>
             </div>
-        </section>
+        </div>
     </section>
 
     <footer>
